# deep-research

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  cmd.md  requirements.txt
ros_ws/src/kinova_llm_control/: CMakeLists.txt  package.xml
ros_ws/src/kinova_llm_control/config/: robot_config.yaml
ros_ws/src/kinova_llm_control/launch/: full_simulation.launch  kinova_with_camera.launch  llm_only.launch  tabletop_simulation.launch
ros_ws/src/kinova_llm_control/models/ball_blue/: model.config  model.sdf
ros_ws/src/kinova_llm_control/models/ball_green/: model.config  model.sdf
ros_ws/src/kinova_llm_control/models/ball_red/: model.config  model.sdf
ros_ws/src/kinova_llm_control/models/table/: model.config  model.sdf
ros_ws/src/kinova_llm_control/scripts/: command_interface.py  llm_controller.py  llm_controller_wrapper.sh
ros_ws/src/kinova_llm_control/urdf/: camera_stand.urdf.xacro  m1n6s300_tabletop.xacro  m1n6s300_with_camera.xacro
ros_ws/src/kinova_llm_control/worlds/: tabletop_workspace.world
scripts/gcp/: create_instance.sh  master_setup.sh  setup_desktop.sh  setup_gazebo_deps.sh  setup_nvidia.sh  setup_python.sh  setup_ros.sh  setup_simulation.sh  sync_ros_package.sh  verify_setup.sh
scripts/local/: sync_to_gcp.sh
